# knota-fold

./: .dockerignore  .env.example  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  docker-compose.yml
.ast-grep/rules/: no-domain-to-err.yml
.github/workflows/: ci.yaml
config/: development.yaml  scheduler.yaml  test.yaml
config/casbin/: model.conf
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
docker/easytier/: easytier-client.toml  easytier-server.toml
examples/: check_file_permissions.rs  playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20250411_000002_tenants.rs  m20250411_000003_roles.rs  m20250411_000004_permissions.rs  m20250411_000005_user_roles.rs  m20250411_000006_role_permissions.rs  m20250411_000007_sys_menus.rs  m20250411_000008_dict_types.rs  m20250411_000009_dict_items.rs  m20250411_000010_tenant_menu_overrides.rs  m20250411_000011_role_menus.rs  m20250411_000012_sys_role_templates.rs  m20250411_000013_sys_role_template_menus.rs  m20250411_000014_sys_role_template_permissions.rs  m20250419_000015_audit_logs.rs  m20260422_000016_sys_configs.rs  m20260423_000017_files.rs  m20260423_000018_file_uploads.rs  m20260423_000019_file_upload_parts.rs  m20260423_000020_file_references.rs  m20260423_000022_file_upload_idempotency.rs  m20260423_000023_file_instant_idempotency.rs  m20260424_000024_i18n.rs  m20260425_000025_scheduled_workers.rs  m20260503_000026_api_keys.rs  m20260504_000027_seed_system_data.rs  m20260505_000028_notifications.rs  m20260505_000029_seed_notification_data.rs  m20260508_000030_knowledge_base.rs  m20260510_000031_kb_scope_and_chat.rs  m20260512_000032_chat_token_columns.rs  m20260512_000033_session_summary_cache.rs  m20260613_000034_worker_runs.rs
rules/: no-error-string.yml  no-map-err-to-model-error-any.yml  no-uuid-parse-to-error-any.yml
src/: app.rs  lib.rs
src/app_logs/: config.rs  format.rs  layer.rs  mod.rs  routes.rs  schema.rs  writer.rs
src/config/: mod.rs
src/controllers/: admin_i18n.rs  api_key_exchange_tokens.rs  api_keys.rs  audit_logs.rs  auth.rs  ci_i18n.rs  dicts.rs  file_references.rs  file_uploads.rs  files.rs  i18n.rs  menus.rs  mod.rs  permissions.rs  role_templates.rs  roles.rs  sys_configs.rs  sys_file_references.rs  sys_file_uploads.rs  sys_files.rs  sys_menus.rs  tenant_i18n.rs  tenants.rs  users.rs  worker_definitions.rs  worker_executions.rs  worker_schedules.rs
src/error_info/: api_key.rs  auth.rs  authz.rs  common.rs  dict.rs  file.rs  i18n.rs  mod.rs  role.rs  sys_config.rs  tenant.rs  upload.rs  user.rs  worker.rs
src/extractors/: mod.rs  request_meta.rs  tenant.rs
src/fixtures/: dict_items.yaml  dict_types.yaml  permissions.yaml  role_permissions.yaml  roles.yaml  scheduled_worker_definitions.yaml  scheduled_worker_tenant_grants.yaml  sys_configs.yaml  sys_menus.yaml  sys_role_template_menus.yaml  sys_role_template_permissions.yaml  sys_role_templates.yaml  tenants.yaml  user_roles.yaml  users.yaml
src/initializers/: casbin.rs  config_validator.rs  knowledge_base.rs  mod.rs  openapi.rs  s3.rs  sqlite_wal.rs
src/middleware/: casbin_authz.rs  ci_token_layer.rs  error_handler.rs  mod.rs  rbac.rs  tracing.rs
src/models/: api_key_exchange_tokens.rs  api_keys.rs  audit_logs.rs  dict_items.rs  dict_types.rs  file_instant_idempotency.rs  file_references.rs  file_repo.rs  file_upload_idempotency.rs  file_upload_parts.rs  file_uploads.rs  files.rs  i18n_bundle_revisions.rs  i18n_entries.rs  i18n_entry_locations.rs  i18n_queries.rs  mod.rs  (+14 more)
tests/: mod.rs  requests_file_uploads.rs  requests_sys_file_uploads.rs  tasks_file_uploads.rs
(+235 files in other folders)
