[workspace]

[package]
name = "knota-fold"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "knota_fold-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true, features = ["cache_redis"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
dashmap = "6"
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.29" }
opentelemetry = { version = "0.28" }
regex = { version = "1.11" }
num-traits = "0.2"
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
casbin = { version = "2", default-features = false, features = ["runtime-tokio"] }
sea-orm-adapter = { version = "0.4", features = ["runtime-tokio-rustls"] }
include_dir = { version = "0.7" }
utoipa = { version = "5", features = ["macros", "uuid"] }
loco-openapi = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3" }
tower = { version = "0.5" }
# Wave 1 - File management (S3/MinIO + content addressing)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1" }
blake3 = { version = "1" }
bytes = { version = "1" }
tokio-util = { version = "0.7", features = ["io"] }
tree_magic_mini = { version = "3" }
# Stateless CAPTCHA for login (image + JWT-encoded answer, no server-side state)
captcha-rs = { version = "0.5", features = ["stateless"] }
flume = "0.11"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "derive"] }
base64 = "0.22"
cron = "0.15"
sha2 = "0.10"
# Wave 2 - Knowledge base (Qdrant + rig-core + parsing)
rig-core = "0.36"
dotenvy = "0.15"
qdrant-client = "1.17"
pulldown-cmark = "0.12"
tiktoken-rs = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

[[bin]]
name = "knota_fold-cli"
path = "src/bin/main.rs"
required-features = []
[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
# Wave 2a - explicit declaration of multipart helper already pulled transitively by loco-rs testing feature
axum-test = { version = "17" }
